--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -26,8 +26,8 @@
     <div class="main-page-header">
         <div class="wrapper">
 
-                <div class="title">事業内容</div>
-                <div class="title down">SERVICE AND PRODUCTS</div>
+            <div class="title">事業内容</div>
+            <div class="title down">SERVICE AND PRODUCTS</div>
         </div>
     </div>
 
@@ -46,7 +46,7 @@
                     col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
                 <div class="row">
                     <div class="left col-lg-6 col-md-6 col-sm-5 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
-                        <img src="../R/article1.JPG" />
+                        <img src="../R/article1.jpg" />
 
                     </div>
 
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="right odd col-lg-6 col-md-6 col-sm-5 col-xs-12
                         col-lg-push-6 col-md-push-6 col-sm-push-7" style="padding: 5px; border: 2px #CACACA solid">
-                        <img src="../R/article1.JPG" />
+                        <img src="../R/article2.jpg" />
                     </div>
 
                     <div class="left col-lg-6 col-md-6 col-sm-7 col-xs-12
@@ -101,7 +101,7 @@
 
                 <div class="row">
                     <div class="left col-lg-6 col-md-6 col-sm-5 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
-                        <img src="../R/article1.JPG" />
+                        <img src="../R/article3.jpg" />
                     </div>
 
                     <div class="right col-lg-6 col-md-6 col-sm-7 col-xs-12">
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="right odd col-lg-6 col-md-6 col-sm-5 col-xs-12
                         col-lg-push-6 col-md-push-6 col-sm-push-7" style="padding: 5px; border: 2px #CACACA solid">
-                        <img src="../R/article1.JPG" />
+                        <img src="../R/motimaki3.jpg" />
                     </div>
 
                     <div class="left col-lg-6 col-md-6 col-sm-7 col-xs-12
@@ -157,7 +157,7 @@
                 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
                 <div class="row">
                     <div class="left col-lg-6 col-md-6 col-sm-5 col-xs-12" style="padding: 5px; border: 2px #CACACA solid">
-                        <img src="../R/article1.JPG" />
+                        <img src="../R/article1.jpg" />
 
                     </div>
 
@@ -287,8 +287,6 @@
             });
         });
     </script>
-
 </body>
-
 
 </html>
