--- a/public/partials/mp_footer.html
+++ b/public/partials/mp_footer.html
@@ -8,8 +8,8 @@
 
             <div class="list col-lg-3 col-md-3 col-sm-3 col-xs-10 
             col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1 widget">
-                <h2>お問い合わせ</h2>
-                <article class="widget_content">
+                <h2 ng-click="toggleFooter(1)">お問い合わせ</h2>
+                <article class="widget_content" ng-class="class1">
                     <ul>
                         <li>
                             <img src="../R/ic_phone_gray.png">
@@ -28,8 +28,8 @@
             </div>
             <div class="list col-lg-3 col-md-3 col-sm-3 col-xs-10 
             col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-1 widget">
-                <h2>サイトマップ</h2>
-                <article class="widget_content">
+                <h2 ng-click="toggleFooter(2)">サイトマップ</h2>
+                <article class="widget_content" ng-class="class2">
                     <ul>
 
                         <li>
