--- a/public/CSS/menu.css
+++ b/public/CSS/menu.css
@@ -23,13 +23,10 @@
     padding: 0;
 }
 
-#main-menu > .container-fluid > .collapse>  .nav > li > a
-{
-    padding: 20px 20px;
+.navbar-default .navbar-nav>li>a{
     color:white;
-    font-family: mangaFont;
-    transition: all 0.4s ease;
     font-size: 1.6rem;
+    font-family: mpluslight;
 }
 
 #main-menu > .container-fluid > .collapse>  .nav > li > a:before,
@@ -63,8 +60,8 @@
 
 #main-menu > .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
     color: white;
-    padding: 20px 20px;
     height: auto;
+    font-family: mpluslight;
 }
 
 #main-menu > .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{
