--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -39,17 +39,20 @@
         <div class="row">
             <div class="info-row col-xs-10 col-sm-8 col-md-8 col-lg-8
             col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-1" ng-repeat="info in infoCompany">
-                <div class="icon">
-                    <img ng-src="{{info.icon}}" />
-                </div>
-                <div class="description">
-                    {{info.infoName}}
-                </div>
-                <div class="info-content">
-                    <div ng-repeat="desc in info.infoDesc">
-                        {{desc}}
-                    </div>
-                </div>
+            <div class="row">
+                    <div class="icon col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            <img ng-src="{{info.icon}}" />
+                        </div>
+                        <div class="description col-xs-6 col-sm-3 col-md-3 col-lg-3">
+                            {{info.infoName}}
+                        </div>
+                        <div class="info-content col-xs-8 col-sm-6 col-md-6 col-lg-6
+                            col-xs-offset-2 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                            <div ng-repeat="desc in info.infoDesc">
+                                {{desc}}
+                            </div>
+                        </div>
+            </div>
             </div>
         </div>
 
