--- a/public/CSS/generalServiceStyles/gs_header_styles.css
+++ b/public/CSS/generalServiceStyles/gs_header_styles.css
@@ -58,7 +58,7 @@
 .row .info-container p.right-text{
     margin: 0;
     padding: 3px 4px;
-    font-family: firaregular;
+    font-family: 'Fira Sans';
 }
 
 .row.rc-row{
