--- a/public/partials/gs_contact.html
+++ b/public/partials/gs_contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_contact_form.css" />
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
 </head>
 <header>
     <div ng-include src="'partials/gs_header.html'"></div>
