--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_menu_styles.css" />
     <link rel="stylesheet" href="../CSS/generalServiceStyles/gs_footer_styles.css" />
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
     <!-- bxSlider CSS file -->
     <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
 
