--- a/public/partials/mp_footer.html
+++ b/public/partials/mp_footer.html
@@ -12,15 +12,15 @@
                 <article class="widget_content" ng-class="class1">
                     <ul>
                         <li>
-                            <img src="../R/ic_phone_gray.png">
+                            <img src="../R/icons/phone-white.svg">
                             <a class="num">0125-23-3725</a>
                         </li>
                         <li>
-                            <img src="../R/ic_phone_gray.png">
+                            <img src="../R/icons/phone-white.svg">
                             <a class="num">FAX 0125-23-2250</a>
                         </li>
                         <li>
-                            <img ng-click="openNewTabLoc()" src="../R/ic_location_gray.png">
+                            <img ng-click="openNewTabLoc()" src="../R/icons/location-white.svg">
                             <a ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号TSビル1階</a>
                         </li>
                     </ul>
