--- a/public/CSS/company_styles.css
+++ b/public/CSS/company_styles.css
@@ -29,7 +29,8 @@ body{
 }
 
 .title-page h3{
-    font-family: firalight;
+    font-family: 'Fira Sans';
+    font-weight: 300;
     color: #FEFFFD;
     transform: skew(30deg);
     margin: 0;
@@ -59,6 +60,7 @@ body{
     padding: 0px;
     border: 1px solid #0052A4;
     margin-top: 40px;
+    box-shadow: -3px 3px 11px 0px #706e6e;
 }
 
 .info-row .icon .icon-inside{
@@ -70,14 +72,14 @@ body{
 .info-row .description{
     margin-top: 12px;
     color: #0052A4;
-    font-weight: bold;
-    font-family: mpluslight;
+    font-family: mplusregular;
+    font-size: 1.8rem;
 }
 
 .info-row .info-content{
     color: #2C2C2C;
     padding: 10px;
-    font-family: mplusthin;
+    font-family: mplusregular;
 }
 
 
@@ -117,11 +119,11 @@ body{
 .caption .row-itm{
     padding: 0;
     font-family: mplusthin;
-    font-size: 2.0rem;
+    font-size: 1.6rem;
 }
 
 .caption .row-itm.num{
-    font-family: firaregular;
+    font-family: 'Fira Sans';
 }
 
 .caption .row-itm.ic{
@@ -135,7 +137,8 @@ body{
     color: #FFF;
     border: 0px;
     border-radius: 0px;
-    height: 200px;
+    min-height: 170px;
+    max-height: 220px;
 }
 
 .address-container .row .caption img{
@@ -167,9 +170,9 @@ body{
         padding-bottom: 10px;
         margin-top: 10px;
     }
-
-    .address-container .row .caption{
-        height: 75px;
-    }
     
+    .caption .row-itm{
+        text-align: center;
+        padding: 2px 0;
+    }
 }
