--- a/public/CSS/menu.css
+++ b/public/CSS/menu.css
@@ -62,12 +62,13 @@
     color: white;
     height: auto;
     font-family: mpluslight;
+    transition: all 0.2s ease-in;
 }
 
 #main-menu > .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{
     background-color: white;
     color: black;
-    
+    transition: all 0.2s ease-in;
 }
 
 
@@ -102,6 +103,11 @@
 
     #main-menu > .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand{
         font-family: mplusregular;
+    }
+
+    #main-menu > .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover{
+        background-color: transparent;
+        color: white;
     }
   }
 
