--- a/public/CSS/metalPlateStyles/mp_header_styles.css
+++ b/public/CSS/metalPlateStyles/mp_header_styles.css
@@ -30,7 +30,7 @@
 }
 
 #call-id{
-    font-family: firaregular;
+    font-family: 'Fira Sans';
 }
 
 .row .right-container{
@@ -106,6 +106,9 @@
     cursor: pointer;
 }
 
+.right-container .rc-row img{
+    width: 40px;
+}
 
 
 .img-container{
@@ -114,6 +117,10 @@
     filter: alpha(opacity=20);
     width: 100%; /* or any custom size */
     height: 100%; 
+}
+
+.info-container .info-row .icon img{
+    padding: 0;
 }
 
 @media screen and (max-width: 991px) {
@@ -149,6 +156,7 @@
         background-color: #7F7F7F;
         margin: 0px 15px;
     }
+
   }
 
   @media screen and (max-width: 770px) {
@@ -175,8 +183,19 @@
     .right-container .info-container p{
         font-size: 1.8rem;
     }
+
+    .right-container .divider{
+        width: 2px;
+        height: 50px;
+    }
+
+    .right-container .mobile-container img{
+        width: 50px;
+    }
     
-    
+    .info-container .info-row .icon{
+        padding: 0;
+    }
   }
 
 /* header styles */
