--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
     <link rel="stylesheet" href="../CSS/lightslider/lightslider.css" type="text/css">
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
     <script src="../scripts/lightslider/lightslider.js" type="text/javascript"></script>
 </head>
 <header>
