--- a/public/partials/company.html
+++ b/public/partials/company.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../CSS/metalPlateStyles/mp_header_styles.css" />
     <link rel="stylesheet" href="../CSS/jquery.mThumbnailScroller.css" type="text/css">
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
     <script src="../scripts/jquery.mThumbnailScroller.js" type="text/javascript"></script>
 </head>
 <header>
@@ -46,8 +46,7 @@
                         <div class="description col-xs-6 col-sm-3 col-md-3 col-lg-3">
                             {{info.infoName}}
                         </div>
-                        <div class="info-content col-xs-8 col-sm-6 col-md-6 col-lg-6
-                            col-xs-offset-2 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+                        <div class="info-content col-xs-12 col-sm-6 col-md-6 col-lg-6">
                             <div ng-repeat="desc in info.infoDesc">
                                 {{desc}}
                             </div>
@@ -68,22 +67,22 @@
                                 </div>
                                 <div class="caption">
                                     <div class="row">
-                                        <div class="row-itm ic col-lg-2 col-md-2 col-sm-2 col-xs-6">
+                                        <div class="row-itm ic col-lg-2 col-md-2 col-sm-6 col-xs-12">
                                             <img src="../R/addressbox/location.png">
                                         </div>
-                                        <div class="row-itm col-lg-10 col-md-10 col-sm-10 hidden-xs">
+                                        <div class="row-itm col-lg-10 col-md-10 col-sm-6 col-xs-12">
                                             {{address.address}}
                                         </div>
-                                        <div class="row-itm ic col-lg-2 col-sm-2 col-xs-6">
+                                        <div class="row-itm ic col-lg-2 col-sm-6 col-xs-12">
                                             <img src="../R/addressbox/call.png">
                                         </div>
-                                        <div class="row-itm num col-lg-10 col-sm-10 hidden-xs">
+                                        <div class="row-itm num col-lg-10 col-sm-6 col-xs-12">
                                             {{address.num}}
                                         </div>
-                                        <div class="row-itm ic col-lg-2 col-sm-2 hidden-xs">
+                                        <div class="row-itm ic col-lg-2 col-sm-6 col-xs-12">
                                             <img src="../R/addressbox/fax.png">
                                         </div>
-                                        <div class="row-itm num col-lg-10 col-sm-10 hidden-xs">
+                                        <div class="row-itm num col-lg-10 col-sm-6 col-xs-12">
                                             {{address.fax}}
                                         </div>
                                     </div>
