--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../CSS/tn_webfonts.css" />
     <!-- bxSlider CSS file -->
     <link href="../plugins/facebooklikeslider/css/jquery.bxslider.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700" rel="stylesheet">
 </head>
 
 <body>
