--- a/public/partials/business.html
+++ b/public/partials/business.html
@@ -22,7 +22,9 @@
 
 
 <body>
+<div ng-controller="businessCtrl" data-ng-init="clearParams()">
 
+</div>
     <div class="main-page-header">
         <div class="wrapper">
 
