--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                        <div class="thumbnail">
+                        <div class="thumbnail" style="opacity: .7;">
                             <div class="logo-container">
                                 <a>
                                     <img src="../R/logos/3logo.png" alt="...">
@@ -65,10 +65,8 @@
     </div>
 
     <div class="row slider">
-
-        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
-
-        <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-10 col-xs-offset-1 col-sm-offset-0 col-md-offset-0 col-lg-offset-0">
+        <div class="slider-container col-lg-10 col-md-10 col-sm-10 col-xs-12 
+        col-xs-offset-0 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
             <div class="thumbnail">
                 <div class="bxslider">
                     <div>
@@ -83,9 +81,6 @@
                 </div>
             </div>
         </div>
-
-        <span class="col-lg-1 col-md-1 col-sm-1 hidden-xs"> </span>
-
     </div>
 
     <footer class="footer navbar navbar-default navbar-bottom">
@@ -101,7 +96,10 @@
     <script>
         $(function () {
             $('.bxslider').bxSlider({
-                mode: 'fade',
+                mode: 'horizontal',
+                randomStart: true,
+                pager: true,
+                auto: true
             });
         });
     </script>
