--- a/public/partials/mp_footer.html
+++ b/public/partials/mp_footer.html
@@ -12,8 +12,10 @@
                 <article class="widget_content" ng-class="class1">
                     <ul>
                         <li>
-                            <img src="../R/icons/phone-white.svg">
-                            <a class="num">0125-23-3725</a>
+                            <a class="phone-link" href="tel:0125-23-3725">
+                                <img src="../R/icons/phone-white.svg">
+                            </a>
+                            <a href="tel:0125-23-3725" class="num">0125-23-3725</a>
                         </li>
                         <li>
                             <img src="../R/icons/phone-white.svg">
