--- a/public/partials/mp_header.html
+++ b/public/partials/mp_header.html
@@ -37,7 +37,7 @@
                 <img src="../R/icons/phone-blue.svg" alt="Phone:">
                 <div class="divider"></div>
                 <div class="right-text">
-                    <h5></a>0125-23-3725</h5>
+                    <h5>0125-23-3725</h5>
                     <p>FAX 0125-23-2250</p>
                 </div>
             </div>
@@ -48,14 +48,14 @@
                 <div class="right-text">
                     <h5 ng-click="openNewTabLoc()">北海道滝川市本町2丁目3番5号</h5>
                     <p>ＴＳビル1階</p>
-
                 </div>
-
             </div>
 
             <div class="mobile-container hidden-lg hidden-md col-sm-8 col-xs-8">
                 <div class="center">
-                        <a href="tel:0125-23-3725"><img src="../R/icons/phone.svg" alt="Phone:"></a>
+                    <a href="tel:0125-23-3725">
+                        <img src="../R/icons/phone.svg" alt="Phone:">
+                    </a>
                     <div class="divider"></div>
                     <img ng-click="openNewTabLoc()" src="../R/icons/location.svg" alt="Location">
 
@@ -66,7 +66,7 @@
     </div>
 </div>
 
-<div class="row mp-menu">
+<div class="row mp-menu" ng-controller="mpMenuController">
     <div class="menu col-lg-10 col-md-10 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-0 col-xs-offset-0">
 
         <nav id="main-menu" class="navbar navbar-default">
@@ -80,22 +80,25 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">トップページ</a>
+                    <a class="navbar-brand" href="#"><img src="../R/logos/Logo Taniguchi.png"></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="#!/metalplatehome">事業内容
+                            <a href="#!/metalplatehome">トップページ
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#!/business">ニュース</a>
+                            <a href="#!/business">事業内容</a>
                         </li>
                         <li>
                             <a href="#!/company">会社概要</a>
+                        </li>
+                        <li>
+                            <a class="news-link" ng-click="scrollTo('mp-news')">ニュース</a>
                         </li>
                     </ul>
                 </div>
