--- a/public/partials/gs_home.html
+++ b/public/partials/gs_home.html
@@ -59,7 +59,7 @@
                 <div id="to-buy">
                     <div class="inner">
                         <div class="btn-container">
-                            <p>CLICK</p>
+                            <p><a href="https://asp.athome.jp/030062/shumokus?direct_search=true&shubetsu=baibai">CLICK</a></p>
                         </div>
 
                         <div class="text">
