--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -17,7 +17,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 <!-- font-awesome icons -->
-   <link rel="stylesheet" href="../CSS/font-awesome.min.css" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
 
 <!-- //font-awesome icons -->
 <!--stylesheets-->
