--- a/public/partials/maintaniguchi.html
+++ b/public/partials/maintaniguchi.html
@@ -71,13 +71,13 @@
             <div class="thumbnail">
                 <div class="bxslider">
                     <div>
-                        <img src="../R/main-slider/tsbuilding_crop.png" title="Funky roots">
+                        <img src="../R/main-slider/tsbuilding_crop.jpg" title="Funky roots">
                     </div>
                     <div>
-                        <img src="../R/main-slider/factory_Crop.png" title="The long and winding road">
+                        <img src="../R/main-slider/factory_Crop.jpg" title="The long and winding road">
                     </div>
                     <div>
-                        <img src="../R/main-slider/large_roof.png" title="Happy trees">
+                        <img src="../R/main-slider/large_roof.jpg" title="Happy trees">
                     </div>
                 </div>
             </div>
